--- a/details/portfolio-details7.html
+++ b/details/portfolio-details7.html
@@ -52,19 +52,37 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-4.png" alt="">
+                    <img src="../assets/img/portfolio/react1.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/detail1_port4.png" alt="">
+                    <img src="../assets/img/portfolio/react2.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/detail2_port4.png" alt="">
+                    <img src="../assets/img/portfolio/react3.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/detail3_port4.png" alt="">
+                    <img src="../assets/img/portfolio/react11.png" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/detail4_port4.png" alt="">
+                    <img src="../assets/img/portfolio/react4.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react5.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react6.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react7.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react8.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react9.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/react10.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -74,14 +92,14 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web Management</li>
-                <li><strong>Project date</strong> 13 December 2023</li>
+                <li><strong>Category</strong>: Web Inventaris</li>
+                <li><strong>Project date</strong> 13 Mei 2024</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is Project Apotek App</h2>
-              <p>
-                Websites developed using Laravel, include key features like login, CRUD (Create, Read, Update, Delete), and search functions.              </p>
+                <h2>This is Project Consume API</h2>
+                <p>
+                    This project aims to create a front-end application using React that can use the inventory API. This application will allow users to view, add, edit and delete inventory items.                </p>
             </div>
           </div>
         </div>
