--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/nayaa.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Front-end Developer</h3>
@@ -100,6 +100,12 @@
             </div>
             <div class="progress">
               <span class="skill">Lumen <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">React JS <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -203,7 +209,16 @@
                         <a href="details/portfolio-details6.html" title="More Details"><i class="bx bx-link"></i></a>
                     </div>
                 </div>
-            </div>
+              </div>
+              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <div class="portfolio-wrap">
+                    <img src="assets/img/portfolio/react11.png" class="img-fluid" alt="">
+                    <div class="portfolio-links">
+                        <a href="assets/img/portfolio/react11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project Consume Inventaris API"><i class="bx bx-plus"></i></a>
+                        <a href="details/portfolio-details7.html" title="More Details"><i class="bx bx-link"></i></a>
+                    </div>
+                </div>
+              </div>
               <div class="col-lg-4 col-md-6 portfolio-item filter-sertificate">
                   <div class="portfolio-wrap">
                       <img src="assets/img/portfolio/sertifikatgit.png" class="img-fluid" alt="">
