--- a/details/portfolio-details6.html
+++ b/details/portfolio-details6.html
@@ -70,6 +70,7 @@
               <ul>
                 <li><strong>Category</strong>: Web Management</li>
                 <li><strong>Project date</strong> 13 December 2023</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/nayasyaula/web-rekap.git" target="_blank" style="color: blue;">web-rekap</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
