--- a/details/portfolio-details7.html
+++ b/details/portfolio-details7.html
@@ -94,6 +94,7 @@
               <ul>
                 <li><strong>Category</strong>: Web Inventaris</li>
                 <li><strong>Project date</strong> 13 Mei 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/nayasyaula/consume_react.git" target="_blank" style="color: blue;">nayasyaula-consume_react.git</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
