--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               </div>
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <h4>Telp:</h4>
                 <p>085156301515</p>
               </div>
             </div>
